--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "faker": "^4.1.0",
     "ramda": "^0.26.1",
     "uuid": "^3.4.0"
   }
